examples/postgres-operator/manifests/000-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-operator
