examples/postgres-operator/manifests/minio-instance.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console-ingressroute
  namespace: minio-operator
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio-console.localhost`)
      kind: Rule
      services:
        - name: minio-instance-console
          port: 9090
